<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:background="@drawable/border">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Deadlift"
            android:textColor="@color/gold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNumberOfExercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_exercise"
                android:textColor="@color/gold" />

            <TextView
                android:id="@+id/tvNumberOfEx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textColor="@color/gold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sets"
                android:textColor="@color/gold"/>

            <TextView
                android:id="@+id/tvSets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:textColor="@color/gold"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rest_seconds"
                android:textColor="@color/gold"/>

            <TextView
                android:id="@+id/tvRestTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="120"
                android:textColor="@color/gold"/>

            <TextView
                android:id="@+id/tvSeconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seconds"
                android:textColor="@color/gold"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Use straps"
            android:textColor="@color/gold"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/ibEdit"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:scaleType="fitXY"
        android:src="@drawable/ic_pencil_grey600_48dp" />

    <ImageButton
        android:id="@+id/ibRemove"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:scaleType="fitXY"
        android:src="@drawable/ic_delete_grey600_48dp" />

</LinearLayout>