<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:textColor="@color/black"
            android:background="@color/gold" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="10dp"
        android:background="@drawable/border">

        <TextView
            android:id="@+id/tvName"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            tools:text="Deadlift"
            android:textColor="@color/gold"
            android:textCursorDrawable="@drawable/color_cursor" />

        <EditText
            android:id="@+id/tvDescription"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:text="Use straps"
            android:layout_marginTop="15dp"
            android:textColor="@color/gold"
            android:backgroundTint="@color/gold"/>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:text="@string/result_date"
            android:layout_marginTop="15dp"
            android:textColor="@color/gold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:orientation="vertical"
            android:background="@drawable/border">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPrevReps"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="Reps: "
                    android:textColor="@color/gold" />

                <TextView
                    android:id="@+id/tvSet1Rep"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3"
                    android:textColor="@color/gold" />

                <TextView
                    android:id="@+id/tvSet2Rep"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3"
                    android:textColor="@color/gold"/>

                <TextView
                    android:id="@+id/tvSet3Rep"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3"
                    android:textColor="@color/gold"/>

                <TextView
                    android:id="@+id/tvSet4Rep"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3"
                    android:textColor="@color/gold"/>

                <TextView
                    android:id="@+id/tvSet5Rep"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3"
                    android:textColor="@color/gold"/>

                <TextView
                    android:id="@+id/tvSet6Rep"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3"
                    android:textColor="@color/gold"/>

                <TextView
                    android:id="@+id/tvSet7Rep"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3"
                    android:textColor="@color/gold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/tvPrevWeights"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="Weights: "
                    android:textColor="@color/gold"/>

                <TextView
                    android:id="@+id/tvSet1Weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3"
                    android:textColor="@color/gold"/>

                <TextView
                    android:id="@+id/tvSet2Weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3"
                    android:textColor="@color/gold" />

                <TextView
                    android:id="@+id/tvSet3Weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3"
                    android:textColor="@color/gold"/>

                <TextView
                    android:id="@+id/tvSet4Weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3"
                    android:textColor="@color/gold"/>

                <TextView
                    android:id="@+id/tvSet5Weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3"
                    android:textColor="@color/gold"/>

                <TextView
                    android:id="@+id/tvSet6Weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3"
                    android:textColor="@color/gold"/>

                <TextView
                    android:id="@+id/tvSet7Weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3"
                    android:textColor="@color/gold"/>

            </LinearLayout>

        </LinearLayout>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="15dp">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:background="@drawable/border">

            <TextView
                android:id="@+id/tvSetNumber"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/set_number"
                android:layout_marginTop="10dp"
                android:textColor="@color/gold"/>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tvReps"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reps"
                    android:textColor="@color/gold"
                    android:layout_marginRight="15dp"/>

                <NumberPicker
                    android:id="@+id/npReps"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:solidColor="#000000"
                    android:background="@drawable/border"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/tvWeights"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textColor="@color/gold" />

                <EditText
                    android:id="@+id/etWeight"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColor="@color/gold"
                    android:backgroundTint="@color/gold"
                    android:textCursorDrawable="@drawable/color_cursor" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/border">

            <Button
                android:id="@+id/bDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/done"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/gold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvRest"
                android:textSize="25sp"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/rest"
                android:textColor="@color/gold"/>

            <Chronometer
                android:id="@+id/cTimer"
                android:layout_marginTop="15dp"
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/gold" />

        </LinearLayout>

    </LinearLayout>

        <Button
            android:id="@+id/bSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/skip"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/gold"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/border">

            <TextView
                android:id="@+id/tvExercises"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:text="exercises"
                android:textColor="@color/gold"/>

            <TextView
                android:id="@+id/tvMaxWeights"
                android:textSize="15sp"
                android:paddingLeft="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:text="10"
                android:textColor="@color/gold"/>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


